# pawwalk

./: .editorconfig  .gitignore  Makefile  README.md  render.yaml
.github/workflows/: ci.yml
apps/android/: README.md  gradlew  gradlew.bat  settings.gradle.kts
apps/android/app/: build.gradle.kts  proguard-rules.pro
apps/android/gradle/: libs.versions.toml
apps/backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0002_positions_postgis.py  0003_roles_and_pets.py  0004_waitlist.py  c507af0b7e1c_initial_schema.py
apps/backend/app/: __init__.py  config.py  data.py  db.py  deps.py  live.py  main.py  models_db.py  schemas.py  security.py  seed.py
apps/backend/app/assistant/: __init__.py  graph.py  intent.py
apps/backend/app/routers/: assistant.py  auth.py  bookings.py  live.py  payments.py  pets.py  waitlist.py  walkers.py
apps/backend/tests/: conftest.py  test_api.py  test_live.py  test_roles_pets.py  test_stats_waitlist.py
apps/ios/: README.md  project.yml
apps/landing/: README.md  next-env.d.ts  next.config.ts  package-lock.json  package.json  postcss.config.mjs
apps/learn/: README.md  android.html  app.js  index.html  styles.css
docs/: ANDROID-ACADEMY-PLAN.md  API-CONTRACT.md  ARCHITECTURE.md  DEPLOY.md  FUNCTIONAL-REVIEW.md  IMPLEMENTATION-PLAN.md  LEARNING-PLAN.md
docs/learning/: android.md  backend.md  ios.md  python-academy-plan.md
dog-walking-app-design/: README.md
dog-walking-app-design/project/: .thumbnail  TROT - Landing Page.dc.html  TROT - Mobile App.dc.html
(+125 files in other folders)
