[project]
name = "pawwalk-backend"
version = "0.1.0"
description = "PawWalk API — FastAPI + LangGraph + Pydantic AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pydantic-ai>=2.0",
    "langgraph>=0.2",
    "httpx>=0.27",
    "sqlmodel>=0.0.21",
    "alembic>=1.13",
    "pwdlib[bcrypt]>=0.2",
    "pyjwt>=2.9",
    "stripe>=11.0",
    "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
